# Hair-Booking-System-Public

./: README.md  SECURITY.md  app.py  common_passwords.txt  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
static/assets/css/: Header-Blue.css  styles.min.css
static/assets/js/: script.min.js
static/css/: 404-NOT-FOUND-animated.css  Header-Blue.css  Ludens-Users---25-After-Register.css  Modal-Login-form.css  sidebar-1.css  sidebar.css
templates/: 404.html  AllBookings.html  book.html  error.html  flash.html  hub.html  index.html  login.html  profile.html  register.html  send_email.html
